// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button accepts props 1`] = `
<div>
  <button
    class="text-sm font-semibold transition rounded-full bg-zinc-900 py-2 px-4 text-white hover:bg-zinc-600 "
    disabled=""
  >
    Button
  </button>
</div>
`;

exports[`Button renders 1`] = `
<div>
  <button
    class="text-sm font-semibold transition rounded-full bg-zinc-900 py-2 px-4 text-white hover:bg-zinc-600 "
  >
    Button
  </button>
</div>
`;

exports[`Button renders as link 1`] = `
<div>
  <a
    class="text-sm font-semibold transition rounded-full bg-zinc-900 py-2 px-4 text-white hover:bg-zinc-600 "
    href="/link"
  >
    Button
  </a>
</div>
`;
